fix(jeeasy-cloud): 优化资源加载配置并更新JAVA_OPTS优化了maven资源加载配置，确保XML文件在编译时能被正确加载。同时，更新了JAVA_OPTS设置，改用G1GC并优化了日志输出路径，以提高垃圾回收效率和日志管理的便捷性。